--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body{
     background-color: #E5E9F7;
     display: flex;
     justify-content: center;
-    padding: 64px;
+    padding: 4%;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 *{
     margin: 0;
@@ -20,9 +21,8 @@ body{
 }
 h1{
     color: #5554EF;
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: bold;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 form{
     width: 100%;
@@ -56,6 +56,9 @@ i{
     width: 100%;
     height: auto;
     padding: 22px 18px;
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
     border-radius: 16px;
     background-image: linear-gradient(to right,#56CCFF,#5c61be,#C942A7);
 }
@@ -68,7 +71,71 @@ i{
     justify-content: space-between;
     padding: 10px 17px;
 }
+.inner-box{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+label{
+    color:#5554EF;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+h2{
+    font-size: 1.5rem;
+}
+p{
+    color: #8C8A8A;
+    font-size: 1rem;
+}
+select{
+    border: none;
+}
 .icons{
     display: flex;
     gap: 15px;
+}
+@media (min-width: 768px) and (max-width: 1024px) {    
+    .main-container{
+        width: 100%;
+        gap: 24px;
+    }
+}
+@media (max-width: 767px) {
+    .main-container{
+        width: 100%;
+        gap: 16px;
+    }
+    form{
+        height: 40px;
+    }
+    h1{
+        font-size: 32px;
+    }
+    #Task-input::placeholder{
+        font-size: 1.2rem;
+    }
+    .all-Tasks-box{
+        padding: 11px 9px;
+        gap: 11px;
+    }
+    .task{
+        padding: 5px 8px;
+    }
+    .inner-box{
+        width: 54%;
+        flex-direction: column-reverse;
+        align-items: end;
+        justify-content: center;
+        gap: 7%;
+    }
+    label{
+        font-size: 1rem;
+        display: inline;
+    }
+    i{font-size: 16px;}
+    h2{font-size: 1.2rem;}
+    p{font-size: 0.9rem;}
 }
