--- a/style.css
+++ b/style.css
@@ -66,12 +66,13 @@ i{
 }
 .task{
     width: 100%;
-    height: 57px;
+    height: 77px;
     background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 17px;
+    padding: 20px;
+    border-radius: 16px;
 }
 .inner-box{
     width: 60%;
@@ -99,6 +100,7 @@ select{
     display: flex;
     gap: 15px;
     cursor: pointer;
+    width: 25%;
 }
 @media (min-width: 768px) and (max-width: 1024px) {    
     .main-container{
@@ -124,9 +126,11 @@ select{
         padding: 11px 9px;
         gap: 11px;
     }
-    .task{
-        padding: 5px 8px;
-    }
+    /* .task{
+        padding: 10px 8px;
+    } */
+
+    
     .inner-box{
         width: 54%;
         flex-direction: column-reverse;
@@ -134,6 +138,12 @@ select{
         justify-content: center;
         gap: 7%;
     }
+    
+    .icons {
+        font-size: 18px; /* smaller icons */
+        gap: 10px; /* reduce gap between icons */
+    }
+
     label{
         font-size: 1rem;
         display: inline;
